--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Foglio stile css -->
   <link rel="stylesheet" href="style.css">
   <!-- Scripts JS -->
-  <link rel="stylesheet" href="script.js">
+  <script type="text/javascript" src="script.js" defer></script>
   <!-- Importo bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -25,8 +25,15 @@
       <div class="row h-100 align-items-center">
         <div class="col-12">
           <div id="image-holder" class="d-flex align-items-center flex-column">
-            <figure><img class="rounded" src="https://picsum.photos/400/300.jpg" alt="Your Downloaded Image"></figure>
-            <button type="button" class="btn cs-btn mt-2 mb-5">Download Image</button>
+            <figure>
+              <img id="image-preview" class="rounded" src="https://picsum.photos/500/400.jpg"
+                alt="Your Downloaded Image" height="400" width="500">
+            </figure>
+            <div class="input-group w-50 mb-2">
+              <button class="btn cs-btn" type="button" id="submit" onclick="changeImage()">Submit</button>
+              <input type="url" class="form-control" id="image" name="image" placeholder="Copy your link here...">
+            </div>
+            <label for="image" class="form-label">Want to upload a different image?</label>
           </div>
         </div>
         <div class="col-12">
@@ -34,23 +41,33 @@
             <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
               <li class="d-flex flex-column align-items-center">
                 <label for="contrast" class="form-label">Contrast</label>
-                <input type="range" class="form-range" id="contrast">
+                <input type="range" class="form-range" id="contrast" min="0" max="100" value="100" step="1"
+                  data-filter="contrast" data-scale="%" onchange="applyFilter()">
               </li>
               <li class="d-flex flex-column align-items-center">
                 <label for="greyscale" class="form-label">Greyscale</label>
-                <input type="range" class="form-range" id="greyscale">
+                <input type="range" class="form-range" id="greyscale" min="0" max="100" value="0" step="1"
+                  data-filter="greyscale" data-scale="%" onchange="applyFilter()">
               </li>
               <li class="d-flex flex-column align-items-center">
-                <label for="saturation" class="form-label">Saturation</label>
-                <input type="range" class="form-range" id="saturation">
+                <label for="brightness" class="form-label">Brightness</label>
+                <input type="range" class="form-range" id="brightness" min="0" max="100" value="0" step="1"
+                  data-filter="brightness" data-scale="%" onchange="applyFilter()">
               </li>
               <li class="d-flex flex-column align-items-center">
-                <label for="drop-shadow" class="form-label">Drop-Shadow</label>
-                <input type="range" class="form-range" id="drop-shadow">
+                <label for="saturate" class="form-label">Saturation</label>
+                <input type="range" class="form-range" id="saturate" min="1" max="100" value="100" step="1"
+                  data-filter="saturate" data-scale="%" onchange="applyFilter()">
               </li>
               <li class="d-flex flex-column align-items-center">
                 <label for="blur" class="form-label">Blur</label>
-                <input type="range" class="form-range" id="blur">
+                <input type="range" class="form-range" id="blur" min="0" max="100" value="0" step="1" data-filter="blur"
+                  data-scale="px" onchange="applyFilter()">
+              </li>
+              <li class="d-flex flex-column align-items-center">
+                <label for="hue-rotate" class="form-label">Hue-Rotate</label>
+                <input type="range" class="form-range" id="hue-rotate" min="0" max="360" value="0" step="1"
+                  data-filter="hue-rotate" data-scale="deg" onchange="applyFilter()">
               </li>
             </ul>
           </div>
